# hakai-oceanography-qc-tools

./: .gitignore  CODEOWNERS  Dockerfile  LICENCE  README.md  default-config.yaml  docker-compose.yaml  makefile  pyproject.toml  requirements.txt  setup.py  unqced_data_2024-08-29.csv
.github/workflows/: deploy-development.yaml  deploy-main.yaml  test-development.yaml
hakai_qc/: analysis.py  ctd.py  flags.py  ioos_qc.py  nutrients.py  qc.py
hakai_qc_app/: app.py  download_hakai.py  figure.py  navbar.py  output.py  selection.py  tooltips.py  utils.py  variables.py  welcome.py
hakai_qc_app/assets/: figure_presets.json  hakai-template-ctd-samples.xlsx
notebooks/: hakai-chlorophyll-qc-tools.ipynb  hakai-nutrients-qc-tests.ipynb  hakai-poms-qc-tests.ipynb
notebooks/.ipynb_checkpoints/: hakai-nutrients-qc-tests-checkpoint.ipynb
scripts/: fix_excel_qc.py
src/: app.py  download_hakai.py  figure.py  figure_menu.py  graph.py  hakai.py  hakai_plotly_template.py  index.py  navbar.py  run.py  selection.py  tools.py  tooltips.py  utils.py  welcome.py
src/assets/: figure_presets.json  hakai-template-nutrients-samples.xlsx  main.css
src/pages/: home.py  nutrients.py
src/utils/: hakai.py  hakai_plotly_template.py  selection.py
tests/: test_ctd_qu39_Jan2022.parquet  test_hakai_auth.py  test_hakai_qc.py  test_hakai_qc_app_version.py
