[tool.poetry]
name = "hakai-oceanography-qc-tools"
version = "0.1.1"
description = "\"Sets of tools used by Hakai oceanography to qc their data\""
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
packages = [{include = "hakai_qc"}, {include = "hakai_qc_app/**/*"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
hakai-api = "^1.2.0"
plotly = "^5.13.0"
openpyxl = "^3.1.1"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
PyYAML = "^6.0"
python-dotenv = "^0.21.1"
ioos-qc = "^2.1.0"
fastparquet = "^2023.7.0"
pyarrow = "^12.0.1"
gsw = "^3.6.17"
loguru = "^0.7.2"
sentry-sdk = {extras = ["loguru"], version = "^1.36.0"}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
