[project]
name = "hakai-oceanography-qc-tools"
version = "0.1.1"
description = "Sets of tools used by Hakai oceanography to qc their data"
authors = [
    { name= "Jessy Barrette"}, 
    { name= "Matthew Foster"},
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "fastparquet>=2024.11.0",
    "gsw>=3.6.20",
    "hakai-api>=2.0.0",
    "ioos-qc>=2.2.1",
    "ipykernel>=7.0.1",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "sentry-sdk[loguru]>=2.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "black>=23.1.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hakai_qc", "hakai_qc_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
